# sparkinfer

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  debug_cute_tma_nvfp4_tile_probe.py  debug_dynamic_superfused_discriminator.py  debug_dynamic_superfused_ncu_annotated.txt  debug_dynamic_superfused_ncu_m1.py  debug_fc2_smem_probe.py  debug_static_phase2_tiny_compiled.py  debug_superfused_parity_distributed_direct_launch.py  debug_superfused_parity_distributed_discriminator.py  debug_superfused_parity_e2e.py  debug_superfused_parity_e2e_direct.py  debug_superfused_parity_prequantized_e2e.py  debug_superfused_parity_workspace_diff.py  debug_superfused_phase2_tiny_compiled.py  ml-primitives-glossary.md  num_verify.py  poison_align16.py  poison_nsweep.py  pyproject.toml  replay_dump.py  replay_scratch.py  repro_n384.py  verify_moe_split.py
.msaport/: msa_attention_plan.md  msa_indexer_plan.md
b12x/: profiling.py  scratch.py
benchmarks/: bench_bf16_to_fp4_tma.py  benchmark_compressed_indexer.py  benchmark_compressed_mla.py  benchmark_compressed_mla_prep.py  benchmark_dense_fp8_vs_deepgemm.py  benchmark_dense_gemm.py  benchmark_dense_gemm_w4a16.py  benchmark_ds4_moe.py  benchmark_fused_dense_gemm.py  benchmark_gemma_dynamic_superfused_paths.py  benchmark_gemma_moe_block_paths.py  benchmark_gemma_sparse_moe_paths.py  benchmark_mla.py  benchmark_mla_query_projection.py  benchmark_moe.py  benchmark_moe_bf16.py  benchmark_msa_indexer.py  benchmark_mxfp8_pv.py  benchmark_nsa_indexer.py  benchmark_packed_dense_gemm.py  benchmark_paged_attention.py  benchmark_paged_indexer.py  benchmark_paged_mqa_indexer.py  benchmark_paged_msa.py  benchmark_pcie_dcp_a2a.py  benchmark_pcie_dma.py  benchmark_pcie_oneshot_fused_rmsnorm.py  benchmark_pcie_ring.py  benchmark_residual.py  benchmark_residual_pre.py  benchmark_sparse_moe_api.py  benchmark_unified_mla_sm120.py  benchmark_vllm_allreduce_dispatch.py  benchmark_vllm_triton_paged_attention.py  benchmark_w4a16_hybrid_moe.py  benchmark_wo_projection.py  common.py  probe_dense_fp4_tile_load_sweep.py  probe_dense_fp8_tile_sweep.py  probe_mxfp8_fragment_layout.py  (+20 more)
docker/: Dockerfile  README.md
docs/: c4_indexer_prefill_reduction_plan.md  cutlass-46-migration.md  cutlass-46-register-accounting.csv  cutlass-46-w4a16-prefill-performance.csv  eager-plan-bind-architecture.md  kernel_techniques_survey.md  mla_sm120_postmortem.md  moe-execution-model.md  (+4 more)
serve/: cli.py
(+870 files in other folders)
